12_playground/_archive/backups/backup/minikube/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
<<<<<<< HEAD
  name: hydrogen
=======
  name: cassandra
>>>>>>> backup
