12_playground/_archive/backups/backup/minikube/postgres/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgres
  namespace: database
spec:
  rules:
  - host: postgres.playground
    http:
      paths:
        - backend:
            serviceName: postgres
            servicePort: 5432
